# moises-db

./: README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
benchmark/: htdemucs4.csv  htdemucs6.csv  oracle4.csv  oracle5.csv  oracle6.csv  spleeter4.csv  spleeter5.csv
moisesdb/: activity.py  dataset.py  defaults.py  signal.py  track.py  utils.py
